Code corrected in Contact Us section to align input fields inside the form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,12 +143,11 @@ img {
     height: 30rem;
 }
 
-/*Contact Us section*/
+/*Contact Us*/
 
 .contact-box {
     margin: 0px auto 0;
     text-align: center;
-    width: 100%;
     max-width: 68rem;
     padding: 2rem;
     box-sizing: border-box;
@@ -165,13 +164,14 @@ img {
     border-radius: 1rem;
     outline: none;
     background-color: #EBEBEC;
+    box-sizing: border-box;
 }
 
 .textarea-field {
     height: 15rem;
     padding-top: 1rem;
     resize: none;
-    }
+}
 
 .button {
     margin: 0 auto;
@@ -224,7 +224,7 @@ footer {
 
 /* Media query section*/
 
-@media screen and (min-width: 320px) and (max-width: 520px) {
+@media screen and (min-width: 320px) and (max-width: 640px) {
 
     html {
         scroll-padding-top: 136px;
@@ -258,13 +258,18 @@ footer {
     }
 }
 
-@media screen and (min-width: 521px) and (max-width: 1000px) {
+@media screen and (min-width: 641px) and (max-width: 1000px) {
 
     html {
         scroll-padding-top: 3rem;
     }
+
     #club-name {
-        font-size: 2rem;
+        font-size: 2.2rem;
+    }
+
+    .nav-item {
+        margin-right: 1rem;
     }
 
     .box {
@@ -272,7 +277,8 @@ footer {
     }
 
     .nav-item a {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
+        letter-spacing: 1px;
     }
 
     .nav-item:first-child {
@@ -281,7 +287,7 @@ footer {
     }
 
     .nav-item a:hover {
-        padding: 5px;
+        padding: 0px;
         font-weight: 400;
     }
 }
@@ -294,3 +300,4 @@ footer {
     }
 
 }
+
